test/conformance/chainsaw/validate/clusterpolicy/cornercases/two-rules-with-different-modes/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: two-rules-with-different-modes
spec:
  steps:
    - name: step-01
      try:
        - apply:
            file: policy.yaml
        - assert:
            file: policy-assert.yaml
    - name: step-02
      try:
      - apply:
          file: good-resources.yaml
    - name: step-03
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resources.yaml
    - name: step-04
      try:
      - assert:
          file: events-assert.yaml
